app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  overflow-x: hidden !important;
  overflow-y: auto;
  background-color: #FFF9FB;
  color: #46351D;
  scroll-behavior: smooth;
}

/* Dark mode styles */
.dark body {
  background-color: #46351D;
  color: #FFF9FB;
}

#link {
  font-weight: 600;
  color: #46351D;
}

.dark #link {
  color: #FFF9FB;
}

::-webkit-scrollbar {
  display: block;
  width: 3px;
}

::-webkit-scrollbar-track {
  background: #FFF9FB;
}

.dark ::-webkit-scrollbar-track {
  background: #46351D;
}

::-webkit-scrollbar-thumb {
  background: #46351D;
  border-radius: 4px;
}

.dark ::-webkit-scrollbar-thumb {
  background: #FFF9FB;
  border-radius: 4px;
}

#root {
  overflow-x: hidden;
  overflow-y: hidden;
}

#underline {
  color: #FFF9FB;
  cursor: pointer;
  padding: 8px 16px;
  border: 1px solid #46351D;
  background: #46351D;
  border-radius: 2px;
  transition: transform 0.15s ease-in-out;
}

.dark #underline {
  color: #46351D;
  border: 1px solid #FFF9FB;
  background: #FFF9FB;
}

#underline:hover {
  transform: scale(1.1);
}

/* New inverted button style */
#underline-inverted {
  color: #46351D;
  cursor: pointer;
  padding: 8px 16px;
  border: 1px solid #46351D;
  background: #FFF9FB;
  border-radius: 2px;
  transition: transform 0.3s ease;
}

.dark #underline-inverted {
  color: #FFF9FB;
  border: 1px solid #FFF9FB;
  background: #46351D;
}

#underline-inverted:hover {
  transform: scale(1.1);
}

html {
  scroll-behavior: smooth;
}

a {
  display: inline;
}

.magnify {
  position: relative;
}

.magnify img {
  width: 100%;
  height: auto;
}

.magnify-glass {
  position: absolute;
  border: 3px solid #000;
  border-radius: 50%;
  cursor: none;
  /* Set the size of the magnifier glass */
  width: 100px;
  height: 100px;
}

/* Add dark mode border styles */
.dark .border-dark {
  border-color: #FFF9FB;
}

/* Add styles for components with white backgrounds in dark mode */
.dark [class*="bg-white"] {
  background-color: #46351D;
  border-color: #FFF9FB;
}

/* Fix text color in dark mode for components with white backgrounds */
.dark [class*="bg-white"] * {
  color: #FFF9FB;
}

/* Fix shadow in dark mode */
.dark [class*="shadow-sm"] {
  box-shadow: 0 1px 2px 0 rgba(255, 249, 251, 0.05);
}

.dark .text-accent {
  color: #CCCCFF; /* dark mode accent color */
}

